<resources>
    <string name="app_name">Launcher</string>
    <string name="network_camera">Network Camera</string>
    <string name="sdi_camera">SDI Camera</string>
    <string name="hd_analog_camera">HD Analog Camera</string>
    <string name="hdmi">HDMI Viewer</string>
    <string name="test_tools">Test Tools</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="cable_tester">Cable Tester</string>
    <string name="ping_analysis" translatable="false">Ping Analysis</string>
    <string name="digital_multi_meter" translatable="false">Digital Multi Meter</string>
    <string name="optical_power_meter" translatable="false">Optical Power Meter</string>
    <string name="etc_tools" translatable="false">Manual</string>
    <string name="app_icon" translatable="false">App Icon</string>
    <string name="my_apps">My Apps</string>
    <string name="viewer" translatable="false">Viewer</string>
    <string name="intro" translatable="false">intro_</string>
    <string name="intro_01">intro_01</string>
    <string name="intro_02">intro_02</string>
    <string name="intro_03">intro_03</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_japanese" translatable="false">日本語</string>
    <string name="language_italian" translatable="false">l\'Italiano</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="welcome" >Welcome. Please select a language.</string>
    <string name="changed" >After that, the language can be freely changed.</string>
    <string name="app_update">App Update</string>
    <string name="packet">Network Test Tools</string>
    <string name="tdrc">TDR Coax</string>
    <string name="tdru">TDR UTP</string>
    <string name="optical">Optical Meter</string>
    <string name="gallery">Gallery</string>
    <string name="file_manager">File Manager</string>
    <string name="sd_card">SD card</string>
    <string name="manual">Manual</string>
    <string name="eth_settings">Eth. Settings</string>

    <string name="pref_eth_mode" translatable="false">eth_mode</string>
    <string name="browser">IP Browser</string>

    <string name="browser_contents">Enter the IP address of the camera and press the OK button to access the camera manufacturer page.\nClick on the bottom left web link to a regular web page.</string>
    <string name="dhcpuse">In DHCP mode, the saved IP list is not applied.</string>
    <string name="eth_set">Saved network information</string>
    <string name="ip_address">IP Address</string>
    <string name="netmask">NetMask</string>
    <string name="gateway">GateWay</string>
    <string name="dns_server">DNS Server</string>
    <string name="eth_contens">Press the Setup button to change the network to the following information.</string>
    <string name="header">Name</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="setup">Setup</string>
    <string name="please_wait">Please Wait......</string>
    <string name="not_ip">Please check IP address again.</string>
    <string name="not_mask">Please check NetMask again.</string>
    <string name="not_dns">Please check DNS address again.</string>
    <string name="not_gate">Please check GateWay again.</string>
    <string name="time_out">Network timeout occurred. Please check the connection and try again.</string>
    <string name="not_title">Name is not entered.</string>
    <string name="same_title">It has the same Name. Please enter another Name.</string>
    <string name="mode">Mode</string>
    <string name="dhcp" translatable="false">DHCP</string>
    <string name="static_ip" translatable="false">Static</string>
    <string name="ethernet_configuration">Ethernet Configuration</string>
    <string name="clear">Clear</string>
    <string name="name_input">Name Input…</string>
    <string name="add">Add</string>
    <string name="factory_network_string1">Network camera can be easily connected by PoE(Power of Ethernet, 30W) power supply.</string>
    <string name="factory_network_string2">To connect network camera, network setting of the monitor should be completed.</string>
    <string name="factory_network_string3">Network cameras that support ONVIF can be connected by searching IP address. If ONVIF is not supported, IP address should be entered manually.</string>
    <string name="factory_network_string4">"If the IP address of searched camera and IP address range of monitor is different, the IP address of the monitor should be changed same as the camera's. "</string>
    <string name="factory_network_string5">"If you lost your camera account information, you should initialize the camera first and connect it. If you need to set a camera account, you can use web browser to set it. "</string>
    <string name="factory_network_string6">You can select the profile that the camera has and output video as desired resolution, and record and capture it.</string>
    <string name="factory_sdi_string1">You can connect HD-SDI, 3G-SDI and EX-SDI camera to check video.</string>
    <string name="factory_sdi_string2">You can check the signal status of connected camera with Level Meter function.</string>
    <string name="factory_sdi_string3">You can check the focus depth by measuring the focus status of connected camera with Focus meter function.</string>
    <string name="factory_sdi_string4">You can check whether the input signal has problem or not with CRC Check function.</string>
    <string name="factory_sdi_string5">You can adjust PTZ and OSD by RS-485, and check and analyze input data.</string>
    <string name="factory_sdi_string6">The camera supports EX-SDI UCC is able to adjust PTZ and OSD with connected coaxial cable.</string>
    <string name="factory_sdi_string7">You can record and capture the input video.</string>
    <string name="factory_analog_string1">You can check video by connecting AHD, TVI, CVI, CVBS  camera.</string>
    <string name="factory_analog_string2">You can check connected camera status with Level Meter function.</string>
    <string name="factory_analog_string3">You can measure the focus status of connected camera to check focus depth with Focus Meter function.</string>
    <string name="factory_analog_string4">You can adjust PTZ and OSD with connected coaxial cable.</string>
    <string name="factory_analog_string5">You can record and capture the input video.</string>
    <string name="factory_hdmi_string1">You can check video and audio when connected to HDMI input port.</string>
    <string name="factory_hdmi_string2">The video currently displayed is output as 1080p 60Hz when connected to HDMI output port.</string>
    <string name="factory_hdmi_string3">You can record and capture the input video.</string>
    <string name="factory_tdr_string1">TDRC - Coaxial cable length measurement</string>
    <string name="factory_tdr_string2">Measure the length of the connected coaxial cable.</string>
    <string name="factory_tdr_string3">More accurate length measurement is available when cable type is selected.</string>
    <string name="factory_tdr_string4">If cable length is displayed abnormal, please try the measurement again.</string>
    <string name="factory_tdr_string5">TDRU - UTP cable length measurement</string>
    <string name="factory_tdr_string6">Measure the length of the connected UTP cable.</string>
    <string name="factory_tdr_string7">Measured status value may vary depending on the cable wiring types.</string>
    <string name="factory_tdr_string8">"Reflectance loss rate may displayed larger depending on the quality of the cable. "</string>
    <string name="factory_tdr_string9">If the cable not measured properly, please refer to the cable diagram and check the wiring status.</string>
    <string name="factory_apps_string1">My Apps</string>
    <string name="factory_apps_string2">Display all apps installed in the product.</string>
    <string name="factory_apps_string3">You can use Playstore to download and use an app.</string>
    <string name="factory_apps_string4">Network Test Tools</string>
    <string name="factory_apps_string5">Capture or analyze packets.</string>
    <string name="factory_apps_string6">Maximum bandwidth measurement is possible.</string>
    <string name="factory_apps_string7">App Update</string>
    <string name="factory_apps_string8">"You can update the apps installed in the product. "</string>
    <string name="factory_apps_string9">Available when Wi-Fi or LAN is connected.</string>
    <string name="factory_quick_string1">Quick Menu</string>
    <string name="factory_quick_string2">Gallery : You can check the saved image and video file.</string>
    <string name="factory_quick_string3">File Manager : You can move or copy data to an external disk.</string>
    <string name="factory_quick_string4">"User's Manual : You can find help regarding monitor operation. "</string>
    <string name="factory_quick_string5">IP Browser : You can access camera page or regular web browser by entering IP address.</string>
    <string name="factory_quick_string6">Ethernet Setting : You can quickly reset by saving frequently used ethernet information.</string>
    <string name="factory_quick_string7">"External Device Off : When data is saved in Micro SD card or USB, removing external device without using this function may result data loss. Please make sure to release external device before removing it. "</string>

    <string name="external_title">Remove external devices</string>
    <string name="external_body">Do you disable the External devices?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="factory_popup">"Thank you for your purchase :) Functional description guide is available for first-time buyers. Would you like to see the guide? "</string>
    <string name="dismiss">Dismiss</string>
    <string name="next">Next</string>
    <string name="not_install">The app is not installed. </string>

</resources>
