<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="850dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/WhiteSmoke"
        android:textSize="40sp"
        android:letterSpacing="0.05"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:letterSpacing="0.05"
        android:text="@string/changed"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/button_korean"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/button_select"
        android:text="@string/language_korean"
        android:onClick="onClick"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_english"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_select"
        android:text="@string/language_english"
        android:onClick="onClick"

        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button_korean"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_japanese"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/button_select"
        android:text="@string/language_japanese"
        android:onClick="onClick"

        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button_english"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_italian"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_select"
        android:text="@string/language_italian"
        android:onClick="onClick"

        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button_japanese"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_german"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/button_select"
        android:text="@string/language_german"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="onClick"

        app:layout_constraintStart_toEndOf="@+id/button_italian"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_bottom"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/next"
        android:onClick="onClick"

        app:layout_constraintStart_toEndOf="@+id/button_german"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>