<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:background="#000">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/factory_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:text="@string/network_camera"
            android:textColor="#E91E63"
            android:textSize="@dimen/factory_main"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sub_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/factory_network_string1"
            android:textColor="#ffffff"
            android:textSize="@dimen/factory_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/factory_ip" />

        <TextView
            android:id="@+id/sub_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/factory_ip"
            android:layout_below="@+id/factory_ip"
            android:layout_marginTop="5dp"
            android:text="@string/factory_network_string2"
            android:textColor="#ffffff"
            android:textSize="@dimen/factory_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_0" />

        <TextView
            android:id="@+id/tvSub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/factory_network_string3"
            android:textColor="#ffffff"
            android:textSize="@dimen/factory_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_1" />

        <TextView
            android:id="@+id/tvSub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/factory_network_string4"
            android:textColor="#ffffff"
            android:textSize="@dimen/factory_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSub1" />

        <TextView
            android:id="@+id/tvSub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/factory_network_string5"
            android:textColor="#ffffff"
            android:textSize="@dimen/factory_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSub2" />

        <TextView
            android:id="@+id/tvSub4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/factory_network_string6"
            android:textColor="#ffffff"
            android:textSize="@dimen/factory_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSub3" />

        <TextView
            android:id="@+id/btn_dismiss"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/dismiss"
            android:textColor="@color/white"
            android:background="@drawable/btn_rounded_selector"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:background="@drawable/btn_rounded_selector"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>